--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://rechesoares:Perpetual.13@cluster0.2mrn9yy.mongodb.net/airbnb"
-NEXTAUTH_SECRET='NEXTAUTH_SECRET'
+DATABASE_URL=
+NEXTAUTH_SECRET=
 
-GITHUB_ID=58f278fa31befaacc16a
-GITHUB_SECRET=beaba951d9259cb880dbde904ecbe1b8cc3dd719
+GITHUB_ID=
+GITHUB_SECRET=
 
-GOOGLE_ID=740930262087-npism2l7ud741aiep6u39s008jjlaoi2.apps.googleusercontent.com
-GOOGLE_SECRET=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
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dw7rpqwpg"
+GOOGLE_ID=
+GOOGLE_SECRET=
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
